// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Transitionable> -> delay: 3000 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-delay: 3000ms;
  transition-delay: 3000ms;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Transitionable> -> duration: fast 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Transitionable> -> duration: themed 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 3000ms;
  transition-duration: 3000ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Transitionable> -> easing: swiftMove 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Transitionable> -> easing: themed 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,1,1);
  transition-timing-function: cubic-bezier(0.4,0,1,1);
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Transitionable> -> property: array property 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: -webkit-transform,width;
  -webkit-transition-property: transform,width;
  transition-property: transform,width;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`<Transitionable> -> property: string property 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-transition-duration: 320ms;
  transition-duration: 320ms;
  -webkit-transition-timing-function: linear;
  transition-timing-function: linear;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
